# larceny

./: CHANGELOG.md  LICENSE  Larceny.hs  README.md  bench.prof.html  circle.yml  larceny.cabal  report.html  stack.yaml
docs/: README.md  choosing.md  conditionals.md  fills-fromscratch.md  fills.md  index.md  templates.md
example/: Data.hs  Fn.hs  Scotty.hs  Substitutions.hs  example.cabal  stack.yaml
example/static/: minimal.css
example/templates/: about.tpl  base.tpl  fancy.tpl  footer.tpl  header.tpl  index.tpl  team.tpl
src/: Html.hs  Larceny.hs
src/Web/: Larceny.hs  LarcenyBS.hs
src/Web/Larceny/: Fills.hs  Html.hs  Internal.hs  Legacy.hs  Svg.hs  Types.hs
test/: Bench.hs  DocTest.hs  Examples.hs  Spec.hs  entries.txt  list.tpl  people.txt  profiling.md
tools/: Convert0.2-0.3.hs
